--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,25 +1,134 @@
-/**
-  |============================
-  | include css partials with
-  | default @import url()
-  |============================
-*/
-@import url('./reset.css');
-@import url('./vite-promo.css');
-@import url('./header.css');
-
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
-
   color: #242424;
   background-color: rgba(255, 255, 255, 0.87);
+}
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+body {
+  padding: 0;
+  text-align: center;
+  margin: 0;
+}
+
+.search-form {
+  display: flex;
+  align-items: baseline;
+  justify-content: center;
+  padding: 15px;
+  background-color: #2777e0;
+}
+
+.input {
+padding: 10px;
+margin-right: 10px;
+width: 300px;
+border-radius: 8px;
+border-color: #2777e0 ;
+}
+
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 15px;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  margin-bottom: 10px;
+  padding: 16px;
+}
+
+.photo-card {
+  transition: transform 0.25s linear;
+  box-shadow: 2px 2px 2px 1px rgba(184, 184, 184, 0.2);
+  border-radius: 8px;
+  height: 100%;
+}
+
+.photo-card:hover {
+  transform: scale(1.05);
+}
+
+.img {
+  margin-bottom: 8px;
+  object-fit: cover;
+  display: block;
+  width: 100%;
+  height: 260px;
+}
+
+.stats {
+  display: flex;
+  justify-content: space-between;
+  column-gap: 10px;
+}
+
+.stats-item {
+  margin: 0;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+  padding-right: 10px;
+  padding-left: 10px;
+}
+
+.btn {
+  padding: 10px 32px;
+  border-radius: 4px;
+  border: 1px solid #fff;
+  background-color: #2777e0;
+  color: #fff;
+  font-size: 16px;
+  transition: transform 0.25s linear;
+}
+
+.btn:hover {
+  color: #2777e0;
+  background-color: #fff;
+  border: 1px solid #2777e0;
+}
+
+.mr-bottom {
+  margin-bottom: 20px;
+}
+
+.search-wrapper {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+.search-input {
+  padding: 10px;
+  width: 300px;
+  border: none;
+  border-radius: 4px 0 0 4px;
+  outline: none;
+}
+
+.search-button {
+  padding: 10px;
+  background-color: #c9cec9;
+  border: none;
+  border-radius: 0 4px 4px 0;
+  cursor: pointer;
+  color: white;
+  font-size: 16px;
+}
+
+.search-button i {
+  margin-right: 5px;
+}
+
+.search-button:hover {
+  background-color: #55bb55;
+}
+
+.search-input:focus + .search-button,
+.search-button:focus {
+  outline: none;
 }
